[gd_scene load_steps=18 format=3 uid="uid://bxh18qk6jrul6"]

[ext_resource type="Script" uid="uid://c1reshk0q8buo" path="res://addons/hengo/scripts/cnode.gd" id="1_onkoy"]
[ext_resource type="Shader" uid="uid://d2dq680ncrnje" path="res://addons/hengo/assets/shaders/popup.gdshader" id="1_u05js"]
[ext_resource type="FontFile" uid="uid://c5wxb4esayen3" path="res://addons/hengo/assets/fonts/Inter-SemiBold.ttf" id="3_8vu1l"]
[ext_resource type="PackedScene" uid="uid://1s3a6exjgyym" path="res://addons/hengo/scenes/from_flow.tscn" id="3_348vq"]
[ext_resource type="FontFile" uid="uid://dr3uwsfctm3mb" path="res://addons/hengo/assets/fonts/Inter-Regular.ttf" id="4_nvxjk"]
[ext_resource type="Texture2D" uid="uid://ffvsjb26gopq" path="res://addons/hengo/assets/images/flow_out.svg" id="5_fqa58"]
[ext_resource type="PackedScene" uid="uid://cfwcyd5bthd1j" path="res://addons/hengo/scenes/flow_slot.tscn" id="5_t32p4"]
[ext_resource type="Script" uid="uid://duabhyiaan0or" path="res://addons/hengo/scripts/flow_connector.gd" id="6_gsclm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b2gmx"]
shader = ExtResource("1_u05js")
shader_parameter/lod = 1.5
shader_parameter/color = Color(0.471375, 0.471375, 0.471375, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b2gmx"]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pj3so"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.156863)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x0qsl"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.301961, 0.313726, 0.321569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bjksb"]
resource_local_to_scene = true
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.33, 0.33, 0.33, 0.270588)
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.121569)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.14902)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_12ubu"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.301961, 0.313726, 0.321569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kx661"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.301961, 0.313726, 0.321569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t3xrx"]
resource_local_to_scene = true
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.964706, 0.0392157, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vwobo"]
resource_local_to_scene = true
bg_color = Color(1, 1, 1, 0.0823529)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 0.698039)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[node name="Cnode" type="PanelContainer"]
material = SubResource("ShaderMaterial_b2gmx")
offset_right = 121.0
offset_bottom = 53.0
theme_override_styles/panel = SubResource("StyleBoxFlat_b2gmx")
script = ExtResource("1_onkoy")

[node name="ErrorBorder" type="Panel" parent="."]
unique_name_in_owner = true
process_mode = 4
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pj3so")

[node name="Container" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="FromFlowContainer" type="HBoxContainer" parent="Container"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="PanelContainer5" parent="Container/FromFlowContainer" instance=ExtResource("3_348vq")]
visible = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x0qsl")

[node name="Label" parent="Container/FromFlowContainer/PanelContainer5/FlowSlot" index="1"]
visible = false
text = ""

[node name="PanelContainer6" parent="Container/FromFlowContainer" instance=ExtResource("3_348vq")]
layout_mode = 2

[node name="PanelContainer7" parent="Container/FromFlowContainer" instance=ExtResource("3_348vq")]
layout_mode = 2

[node name="PanelContainer8" parent="Container/FromFlowContainer" instance=ExtResource("3_348vq")]
layout_mode = 2

[node name="PanelContainer9" parent="Container/FromFlowContainer" instance=ExtResource("3_348vq")]
layout_mode = 2

[node name="TitleContainer" type="PanelContainer" parent="Container"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 6
theme_override_styles/panel = SubResource("StyleBoxFlat_bjksb")

[node name="CenterContainer" type="CenterContainer" parent="Container/TitleContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Container/TitleContainer/CenterContainer"]
process_mode = 4
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 8

[node name="TitleIcon" type="TextureRect" parent="Container/TitleContainer/CenterContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Title" type="Label" parent="Container/TitleContainer/CenterContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_8vu1l")
theme_override_font_sizes/font_size = 14
text = "Title"

[node name="CenterContainer" type="HBoxContainer" parent="Container"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="InputContainer" type="VBoxContainer" parent="Container/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="OutputContainer" type="VBoxContainer" parent="Container/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="Container"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_12ubu")

[node name="FlowContainer" type="HBoxContainer" parent="Container/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="FlowSlot" type="PanelContainer" parent="Container/PanelContainer/FlowContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kx661")

[node name="FlowSlot" type="VBoxContainer" parent="Container/PanelContainer/FlowContainer/FlowSlot"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="Container/PanelContainer/FlowContainer/FlowSlot/FlowSlot"]
modulate = Color(1, 1, 1, 0.666667)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_nvxjk")
theme_override_font_sizes/font_size = 12
text = "cnode"
horizontal_alignment = 1

[node name="Control" type="Control" parent="Container/PanelContainer/FlowContainer/FlowSlot/FlowSlot"]
layout_mode = 2

[node name="Connector" type="TextureRect" parent="Container/PanelContainer/FlowContainer/FlowSlot/FlowSlot/Control" node_paths=PackedStringArray("root")]
modulate = Color(0.227451, 0.25098, 0.278431, 1)
custom_minimum_size = Vector2(20, 50)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.5
offset_right = 19.5
offset_bottom = 20.0
grow_horizontal = 2
size_flags_horizontal = 7
texture = ExtResource("5_fqa58")
expand_mode = 1
stretch_mode = 3
flip_v = true
script = ExtResource("6_gsclm")
root = NodePath("../../../../../../..")
type = "true_flow"

[node name="FlowSlot2" parent="Container/PanelContainer/FlowContainer" instance=ExtResource("5_t32p4")]
visible = false
layout_mode = 2

[node name="FlowSlot3" parent="Container/PanelContainer/FlowContainer" instance=ExtResource("5_t32p4")]
visible = false
layout_mode = 2

[node name="FlowSlot4" parent="Container/PanelContainer/FlowContainer" instance=ExtResource("5_t32p4")]
visible = false
layout_mode = 2

[node name="FlowSlot5" parent="Container/PanelContainer/FlowContainer" instance=ExtResource("5_t32p4")]
visible = false
layout_mode = 2

[node name="SelectBorder" type="Panel" parent="."]
unique_name_in_owner = true
process_mode = 4
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t3xrx")

[node name="Border" type="Panel" parent="."]
unique_name_in_owner = true
process_mode = 4
modulate = Color(1, 1, 1, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vwobo")

[editable path="Container/FromFlowContainer/PanelContainer5"]
